Fix safari legend being cut off on visualizations
The flex-shrink and flex-grow properties here have no effect because
they are already set to 1 further up in the cascade, so this is really
only removing the flex-basis of 100% in favor of the already set value
of auto.

Fixes #5876

--- a/src/plugins/kibana/public/visualize/editor/styles/_editor.less
+++ b/src/plugins/kibana/public/visualize/editor/styles/_editor.less
@@ -355,7 +355,6 @@
     }
 
     .visualize-chart {
-      flex: 1 1 100%;
       position: relative;
     }
   }
